<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <ImageView
            android:id="@+id/iv_ask"
            style="@style/one_level_doctor_iv"
            android:src="@mipmap/home_one_online_ask" />


        <LinearLayout style="@style/one_level_doctor_container">

            <TextView
                android:textColor="@color/home_one_level_tv"
                style="@style/one_level_doctor_tv_1"
                android:text="@string/home_one_level_doctor_1" />

            <TextView
                android:textColor="@color/home_secondary_tv"
                style="@style/home_one_level_doctor_2"
                android:text="@string/home_one_level_doctor_2" />


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <ImageView
            android:id="@+id/iv_doctor"
            style="@style/one_level_doctor_iv"
            android:src="@mipmap/home_one_family_doctor" />


        <LinearLayout
            style="@style/one_level_doctor_container"
            android:layout_toRightOf="@+id/iv_doctor">

            <TextView
                style="@style/one_level_doctor_tv_1"
                android:textColor="@color/home_one_level_tv"
                android:text="@string/home_one_level_doctor_3" />

            <TextView
                android:textColor="@color/home_secondary_tv"
                style="@style/home_one_level_doctor_2"
                android:text="@string/home_one_level_doctor_4" />


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>