<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_marginTop="2dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_home"
            style="@style/home_bottom_toolbar_iv"
            android:src="@mipmap/bottom_tools_home_select" />

        <TextView
            style="@style/home_bottom_toolbar_tv"

            android:layout_below="@+id/iv_home"
            android:text="@string/home_bottom_home"
            android:textColor="@color/home_bottom_toolbar_tv_select" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_marginTop="2dp"

        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_services"
            style="@style/home_bottom_toolbar_iv"
            android:src="@mipmap/bottom_tools_service_normal" />

        <TextView
            style="@style/home_bottom_toolbar_tv"
            android:layout_below="@+id/iv_services"
            android:text="@string/home_bottom_services" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_marginTop="2dp"

        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_tool"
            style="@style/home_bottom_toolbar_iv"
            android:src="@mipmap/bottom_tools_tool_normal" />

        <TextView
            style="@style/home_bottom_toolbar_tv"
            android:layout_below="@+id/iv_tool"
            android:text="@string/home_bottom_tool" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="2dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_me"
            style="@style/home_bottom_toolbar_iv"
            android:src="@mipmap/bottom_tools_me_normal" />

        <TextView
            style="@style/home_bottom_toolbar_tv"
            android:layout_below="@+id/iv_me"
            android:text="@string/home_bottom_me" />


    </RelativeLayout>


</LinearLayout>